syntax = "proto3";

package common;

// Config service
service Config {
  rpc GetSources (Nil) returns (ConfigSources) {}
  rpc GetWork (Nil) returns (FetchWork) {}
}

// Nil is nil
message Nil {}

// ConfigSources is a collection of data sources
message ConfigSources {
  repeated ConfigSource sources = 1;
}

// ConfigSource defines a remote data source
message ConfigSource {
  string ID = 1;
  string URL = 2;
  string store = 3;
}

// FetchWork tells a fetcher all its jobs.
message FetchWork {
  repeated FetchJob jobs = 1;
}

// FetchJob tells a fetcher to do something.
message FetchJob {
  string ID = 1;
  string URL = 2;
  string store = 3;
}

// Store service
service Store {
  rpc PostFeed (StorePostFeedRequest) returns (StorePostFeedResponse) {}
  rpc GetFeed (StoreGetFeedRequest) returns (StoreGetFeedResponse) {}
}

// StoreArticle is an article in the store
message StoreArticle {
  string ID = 1;
  string title = 2;
  int64 date = 3;
  string body = 4;
}

// StorePostFeedRequest is how to put articles into the store
message StorePostFeedRequest {
  string feedID = 1;
  repeated StoreArticle articles = 2;
}

// StorePostFeedResponse is nothing
message StorePostFeedResponse {
}

// StoreGetFeedRequest is how to request articles from the store
message StoreGetFeedRequest {
  string feedID = 1;
  int64 since = 2;
}

// StoreGetFeedResponse is some articles from the store
message StoreGetFeedResponse {
  repeated StoreArticle articles = 2;
}
